LATEST

* Fixed wrong texture for pink and gray glazed terracotta.

1.4.4 - 2017-12-31

* Windows installer now detects Java 9 installations.
* Added armor rendering for player entities.
* Added armor stand rendering.
* Added banner rendering.
* Added UI elements to modify entity armor in the Entities tab.
  This currently applies to players and armor stands.
* Added a drop down menu to the entity posing controls for selecting which limb
  to pose.
* Tweaked stone wall rendering to behave more like Minecraft.
* Plugins can now modify the main window tabs.
* Added banner rendering.
* Improve bed rendering for Minecraft 1.12 (colored beds).
* Y clipping is now a per-scene setting, with an upper clip value.
* The Y clip planes now cull non-player entities.
* Spruce and birch leaf colors are now fixed like in Minecraft.

1.4.3 - 2017-07-22

* Various small UI improvements and bug fixes.
* Improved the way fences, stone walls, glass panes, and iron bars
  connect to other blocks.
* Added plugin manager in the launcher, among the advanced settings.
* The Plugin API now expects plugins to provide metadata.
* Made resource pack loading more flexible.
* Fog is now blended with the sky near the horizon.
* Minecraft block IDs are now displayed in the block info tooltip.
* Improved error handling for skymap loading.
    * Added -f option to ignore headless skymap loading errors.
* Fixed incorrect top texture for inverted daylight sensors.
* Added rendering for Minecraft 1.12 blocks:
    * Glazed Terracotta
    * Concrete
    * Concrete Powder
    * Beetroots
* Made block material properties configurable per-scene.
* Modified specular reflection rendering.
* Added two new post-processors
    * Hable tone mapping
    * ACES filmic tone mapping

1.4.2 - 2017-01-15

* Added support for multiple resource packs. The resource pack
  load order can be changed via Options->Edit resource packs.
* Added rendering for Minecraft 1.11 blocks:
    * Observer Block
    * Shulker Box